--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "react-spinners": "^0.8.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "yup": "^0.28.1"
