--- a/package.json
+++ b/package.json
@@ -48,5 +48,11 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
+	},
+	"devDependencies": {
+		"@types/jest": "^25.1.2",
+		"enzyme": "^3.11.0",
+		"enzyme-adapter-react-16": "^1.15.2",
+		"redux-mock-store": "^1.5.4"
 	}
 }
