Fix coverage script so now we get coverage reporting from Jest

--- a/codeclimate.yml
+++ b/codeclimate.yml
@@ -1,5 +1,11 @@
 exclude_patterns:
-    - "tests/"
-    - "spec/"
-    - "**/vendor/"
-    - "**/node_modules/"
+  - "**/*.spec.js"
+  - "**/public/"
+  - "**/vendor/"
+  - "**/node_modules/"
+  - "**/.github/"
+  - ".github/"
+  - "*.md"
+  - "*.json"
+  - "**/database/"
+  - "**/coverage"
