--- a/package.json
+++ b/package.json
@@ -24,14 +24,23 @@
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
-		"coverage": "CI=true yarn test --coverage || true"
+		"coverage": "yarn test --coverage --watchAll=false"
 	},
 	"jest": {
-		"collectCoverageFrom": [
-			"**/*.{js,jsx}",
-			"!**/node_modules/**",
-			"!**/vendor/**",
-			"!**/__tests__/**"
+		"coverageReporters": [
+			"json-summary",
+			"text",
+			"lcov"
+		],
+		"coveragePathIgnorePatterns": [
+			"/node_modules/",
+			"/__tests__/",
+			"/coverage/",
+			"/public/",
+			"/database/",
+			"/.github/",
+			"serviceWorker.js",
+			"index.js"
 		]
 	},
 	"eslintConfig": {
