--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
 			"!**/node_modules/**",
 			"!**/vendor/**",
 			"!**/__tests__/**"
-		]
+		],
+		"verbose": true
 	},
 	"eslintConfig": {
 		"extends": "react-app"
