--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
 		"@testing-library/user-event": "^7.1.2",
 		"antd": "^3.26.7",
 		"axios": "^0.19.2",
+		"enzyme": "^3.11.0",
+		"enzyme-adapter-react-16": "^1.15.2",
+		"fetch-mock": "^9.0.0-beta.2",
+		"jest-mock-axios": "^3.2.0",
 		"react": "^16.12.0",
 		"react-dom": "^16.12.0",
 		"react-redux": "^7.1.3",
@@ -15,6 +19,7 @@
 		"react-scripts": "3.3.0",
 		"react-spinners": "^0.8.0",
 		"redux": "^4.0.5",
+		"redux-mock-store": "^1.5.4",
 		"redux-persist": "^6.0.0",
 		"redux-thunk": "^2.3.0",
 		"yup": "^0.28.1"
