--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"@testing-library/user-event": "^7.1.2",
 		"antd": "^3.26.7",
 		"axios": "^0.19.2",
+		"node-sass": "^4.13.1",
 		"react": "^16.12.0",
 		"react-dom": "^16.12.0",
 		"react-redux": "^7.1.3",
