--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
 		"react-router-dom": "^5.1.2",
 		"react-scripts": "3.4.0",
 		"react-spinners": "^0.8.0",
+		"react-video-thumbnail": "^0.1.3",
 		"redux": "^4.0.5",
 		"redux-persist": "^6.0.0",
 		"redux-thunk": "^2.3.0",
+		"simple-react-video-thumbnail": "0.0.7",
 		"socket.io-client": "^2.3.0",
 		"yup": "^0.28.1"
 	},
