--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,3 @@
 {
-	"liveServer.settings.port": 5501,
-	"workbench.colorCustomizations": {
-		"activityBar.background": "#451D4B",
-		"titleBar.activeBackground": "#612969",
-		"titleBar.activeForeground": "#FCF8FC"
-	}
+	"liveServer.settings.port": 5501
 }
