--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,14 +1,36 @@
+# .codeclimate.yml
+version: "2"
+checks:
+  # Disable checks for similar code.
+  # Because this creates too many false positives.
+  similar-code:
+    enabled: false
+  # Increase the number of lines allowed for a method.
+  # Because this is more reasonable for JavaScript.
+  method-lines:
+    config:
+      threshold: 50
+
 exclude_patterns:
+   - "tests/"
+  - "spec/"
   - "**/*.spec.js"
-  - "**/public/"
+  - "**/*.spec.jsx"
+  - "**/*.spec.ts"
+  - "**/*.spec.tsx"
   - "**/vendor/"
   - "**/node_modules/"
+
   - "**/.github/"
   - ".github/"
+  - "public/"
+  - "database/"
+  - "coverage/"
+  - "seeds/"
+  - "migrations/"
   - "*.md"
   - "*.json"
-  - "**/database/"
-  - "**/coverage"
+
 plugins:
   duplication:
     enabled: true
@@ -17,3 +39,4 @@ plugins:
         javascript:
           count_threshold: 5
           mass_threshold: 75
+
