--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"react-dom": "^16.12.0",
 		"react-redux": "^7.1.3",
 		"react-router-dom": "^5.1.2",
-		"react-scripts": "3.4.0",
+		"react-scripts": "^3.4.0",
 		"react-spinners": "^0.8.0",
 		"react-video-thumbnail": "^0.1.3",
 		"redux": "^4.0.5",
