--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
 	"private": true,
 	"dependencies": {
 		"@ant-design/icons": "^4.0.5",
+		"@okta/okta-auth-js": "^3.1.1",
+		"@okta/okta-react": "^3.0.1",
+		"@okta/okta-signin-widget": "^4.0.2",
 		"@testing-library/jest-dom": "^4.2.4",
 		"@testing-library/react": "^9.3.2",
 		"@testing-library/user-event": "^7.1.2",
