--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"antd": "^3.26.7",
 		"axios": "^0.19.2",
 		"node-sass": "^4.13.1",
+		"prop-types": "^15.7.2",
 		"react": "^16.12.0",
 		"react-dom": "^16.12.0",
 		"react-redux": "^7.1.3",
