--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
-		"coverage": "yarn test --coverage --watchAll=false"
+		"coverage": "yarn test --coverage --watchAll=false || true"
 	},
 	"jest": {
 		"coverageReporters": [
