--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"react-scripts": "3.4.0",
 		"react-spinners": "^0.8.0",
 		"react-video-thumbnail": "^0.1.3",
+		"recharts": "^1.8.5",
 		"redux": "^4.0.5",
 		"redux-persist": "^6.0.0",
 		"redux-thunk": "^2.3.0",
