--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"antd": "^3.26.7",
 		"axios": "^0.19.2",
 		"node-sass": "^4.13.1",
+		"polyfill-library": "^3.93.0",
 		"prop-types": "^15.7.2",
 		"react": "^16.12.0",
 		"react-dom": "^16.12.0",
